# prompt-hub-sol

./: .gitignore  README.md  bosgWSfXWNWUrn4ncWgv6jFur3Er6mfq4TvJLL2QvkR.json  ck --full  next.config.mjs  package-lock.json  package.json  tsconfig.json  user1-keypair.json  user2-keypair.json
anchor/: Anchor.toml
anchor/programs/prompthubsol/: Cargo.toml
anchor/programs/prompthubsol/src/: lib.rs
anchor/src/: index.ts  prompthubsol-exports.ts
anchor/tests/: prompthubsol.spec.ts
prompt_marketplace/: Anchor.toml  buyer-keypair.json  package-lock.json  package.json  promphub-keypair.json  seller-keypair.json  tests.ts  tsconfig.json  tsconfig.tests.json
prompt_marketplace/programs/prompt_marketplace/: Cargo.toml
prompt_marketplace/programs/prompt_marketplace/src/: lib.rs
prompt_marketplace/tests/: prompt_marketplace.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/browse/: page.jsx
src/app/chat/: page.tsx
src/app/profile/: page.tsx
src/app/prompthubsol/: page.tsx
src/app/sell/: page.tsx
src/components/: ai-chatbox.tsx  chat-area.tsx  chat-interface.tsx  conversation-details.tsx  navigation.jsx  sidebar.tsx  sparkles.tsx  stats-counter.tsx  typewriter.tsx
src/components/prompthubsol/: prompthubsol-data-access.tsx  prompthubsol-feature.tsx  prompthubsol-ui.tsx
src/components/solana/: solana-provider.tsx
src/components/ui/: calendar.tsx  ui-layout.tsx
